Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: alexanderolschok/backendp3:v1.4
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 8081
      targetPort: 8080
      name: backmon
  type: LoadBalancer
