Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: alexanderolschok/frontendp3:v1.7
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
      name: frontmon
  type: LoadBalancer
