Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/trial.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trial-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trial
  template:
    metadata:
      labels:
        app: trial
    spec:
      containers:
      - name: trial
        image: alexanderolschok/trialp3:v1.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: trial-service
  labels: 
    app: trial
spec:
  selector:
    app: trial
  ports:
    - port: 8082
      targetPort: 8080
      name: trialmon
  type: LoadBalancer
