Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/jaeger-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-via-traefik
  namespace: observability
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jaeger.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: jaeger-query
          port: 16686
