Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/myapp-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: myapp-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`myapp.local`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend-service
          port: 8081
    - match: Host(`myapp.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend-service
          port: 8080
    - match: Host(`myapp.local`) && PathPrefix(`/trace`)
      kind: Rule
      services:
        - name: trial-service
          port: 8082
